Interpreter support variable declaration operations
LocalContext, CurrentRuntime, RuntimeBuilder,
VariableExpressionEvaluator, VariableDeclarationOperationInterpreter