@@ -71,6 +71,10 @@
 						javamm.interpreter/com.revenat.javamm.interpreter.component.impl.operation=ALL-UNNAMED
 						--add-opens
 						javamm.interpreter/com.revenat.javamm.interpreter.component.impl.operation.simple=ALL-UNNAMED
+						--add-opens
+						javamm.interpreter/com.revenat.javamm.interpreter.component.impl.expression.evaluator=ALL-UNNAMED
+						--add-opens
+						javamm.interpreter/com.revenat.javamm.interpreter.model=ALL-UNNAMED
 					</argLine>
 				</configuration>
 			</plugin>
